--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <meta name="twitter:title" content="ÖMER.AI | Yapay Zeka Fabrikası">
     <meta name="twitter:description" content="Yazılım ve yapay zeka fabrikası. Gemini ve Imagen ile görsel üretimi, chatbot, web tasarım.">
     <link rel="stylesheet" href="style.css">
-    <!-- Analytics: GA4 veya Plausible ID'nizi .env veya buraya ekleyin -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script> -->
-    <!-- <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-XXXXXXXXXX');</script> -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6FVE6351"></script>
+    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-HN6FVE6351');</script>
 </head>
 <body>
     <div id="vanta-bg" class="vanta-background" aria-hidden="true"></div>
