--- a/index.html
+++ b/index.html
@@ -17,6 +17,39 @@
     <meta name="twitter:title" content="ÖMER.AI | Yapay Zeka Fabrikası">
     <meta name="twitter:description" content="Yazılım ve yapay zeka fabrikası. Gemini ve Imagen ile görsel üretimi, chatbot, web tasarım.">
     <link rel="stylesheet" href="style.css">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "ÖMER.AI",
+        "url": "https://ai-fabrika-vip.vercel.app",
+        "logo": "https://ai-fabrika-vip.vercel.app/img/proje1.jpg",
+        "description": "Yazılım ve yapay zeka fabrikası. Gemini ve Imagen ile görsel üretimi, chatbot, web tasarım, Telegram entegrasyonu.",
+        "slogan": "Geleceği kodla, görselleri mühürle.",
+        "sameAs": []
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "ÖMER.AI | Yapay Zeka Fabrikası",
+        "url": "https://ai-fabrika-vip.vercel.app",
+        "description": "Yazılım ve yapay zeka fabrikası. AI görsel üretimi, chatbot, web tasarım hizmetleri.",
+        "publisher": { "@type": "Organization", "name": "ÖMER.AI" }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            { "@type": "Question", "name": "Proje ne kadar sürer?", "acceptedAnswer": { "@type": "Answer", "text": "Web projeleri 1-2 hafta, AI bot projeleri 2-3 hafta sürebilir." } },
+            { "@type": "Question", "name": "Destek veriyor musunuz?", "acceptedAnswer": { "@type": "Answer", "text": "Teslimattan sonra 1 ay ücretsiz destek." } },
+            { "@type": "Question", "name": "Ödeme nasıl yapılır?", "acceptedAnswer": { "@type": "Answer", "text": "Havale/EFT veya kredi kartı. %50 ön ödeme ile başlıyoruz." } }
+        ]
+    }
+    </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6FVE6351"></script>
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-HN6FVE6351');</script>
 </head>
