--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ÖMER.AI | Yapay Zeka Fabrikası">
     <meta name="twitter:description" content="Yazılım ve yapay zeka fabrikası. Gemini ve Imagen ile görsel üretimi, chatbot, web tasarım.">
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     <link rel="stylesheet" href="style.css">
     <script type="application/ld+json">
     {
