--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
         <div id="system-log-entries" class="system-log-entries"></div>
     </div>
     <div class="chat-wrapper">
-        <button class="chat-toggle-btn" id="chat-toggle-btn" onclick="toggleChat()" title="Sohbeti aç">🤖 Sohbet</button>
-        <div id="ai-chat-widget" class="chat-container">
+        <button class="chat-toggle-btn visible" id="chat-toggle-btn" onclick="toggleChat()" title="Sohbeti aç">🤖 Sohbet</button>
+        <div id="ai-chat-widget" class="chat-container chat-closed">
             <div class="chat-header">
                 <span>🤖 ÖMER.AI Asistan</span>
                 <div class="chat-header-actions">
