--- a/index.html
+++ b/index.html
@@ -612,6 +612,7 @@
     <button id="back-to-top" class="back-to-top" onclick="scrollToTop()" title="Yukarı çık" aria-label="Yukarı çık">↑</button>
     <script>
       window.OMERAI_MOBILE = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) || window.innerWidth < 768;
+      if (window.OMERAI_MOBILE) localStorage.setItem("chatOpen", "false");
     </script>
     <script>
       if (!window.OMERAI_MOBILE) {
