Clarity heatmap - Project ID eklendi

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
     </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HN6FVE6351"></script>
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-HN6FVE6351');</script>
+    <!-- Microsoft Clarity - Heatmap: clarity.microsoft.com'dan ücretsiz proje oluştur, ID'yi aşağıya yaz -->
+    <script>window.OMERAI_CLARITY_ID="vgn5z3p2ux";</script>
+    <script type="text/javascript">(function(){var id=window.OMERAI_CLARITY_ID;if(!id)return;(function(c,l,a,r,i,t){c[a]=c[a]||[];var z=l.createElement(r),s=l.getElementsByTagName(r)[0];z.async=1;z.src="https://www.clarity.ms/tag/"+i;t=l.getElementsByTagName(r)[0];t.parentNode.insertBefore(z,t)})(window,document,"clarity","script",id)});</script>
 </head>
 <body>
     <div id="vanta-bg" class="vanta-background" aria-hidden="true"></div>
