--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#22d3ee">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="ÖMER.AI">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>">
+    <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>">
     <style>/* Critical CSS - İlk ekran */
 :root{--bg-color:#1e3a4f;--text-color:#b2ebf2;--accent-color:#22d3ee;--nav-bg:rgba(30,58,79,.95)}
 html{scroll-behavior:smooth}
