--- a/index.html
+++ b/index.html
@@ -359,6 +359,8 @@ nav{display:flex;justify-content:space-between;align-items:center;padding:1.5rem
                         <source src="" type="video/mp4">
                         Tarayıcınız videoyu desteklemiyor.
                     </video>
+                </div>
+                <div class="seal-band-wrapper">
                     <div class="seal-band" id="video-seal-band">
                         <span class="seal-text">ÖMER.AI Fabrikası - Seri No: <span id="video-seal-serial">#0000</span></span>
                     </div>
