--- a/index.html
+++ b/index.html
@@ -670,6 +670,19 @@ nav{display:flex;justify-content:space-between;align-items:center;padding:1.5rem
                 </article>
             </div>
         </section>
+        
+        <!-- Patronun Gündemi - Son Çözüm -->
+        <section class="blog-section footer-section">
+            <h2 class="neon-text" data-tr="Blog & Haberler" data-en="Blog & News">Blog & Haberler</h2>
+            <div id="patronun-gundemi" class="patronun-gundemi">
+                <h3 class="patronun-gundemi-title" data-tr="Patronun Gündemi" data-en="Boss's Agenda">Patronun Gündemi</h3>
+                <div id="patronun-gundemi-content" class="patronun-gundemi-content">
+                    Haftalık AI bülteni yükleniyor...
+                </div>
+                <button class="neon-button patron-refresh-btn" onclick="loadPatronunGundemi()" data-tr="Yenile" data-en="Refresh">Yenile</button>
+            </div>
+        </section>
+        
         <section class="newsletter-section footer-section">
             <h3 class="neon-text" data-tr="Bültene Abone Ol" data-en="Subscribe to Newsletter">Bültene Abone Ol</h3>
             <p class="newsletter-desc" data-tr="AI ve yazılım gündeminden haberdar ol." data-en="Stay updated on AI and software news.">AI ve yazılım gündeminden haberdar ol.</p>
