--- a/index.html
+++ b/index.html
@@ -585,6 +585,7 @@ nav{display:flex;justify-content:space-between;align-items:center;padding:1.5rem
             <div id="voice-seal-status" class="voice-seal-status" style="display:none;"></div>
             <div class="chat-quick-actions">
                 <button class="quick-btn" onclick="quickAction('görsel')" data-tr="🖼️ Görsel Üret" data-en="🖼️ Generate">🖼️ Görsel Üret</button>
+                <button class="quick-btn" onclick="quickAction('gündem')" data-tr="📋 Gündem" data-en="📋 Agenda">📋 Gündem</button>
                 <button class="quick-btn" onclick="quickAction('web')" data-tr="🌐 Web Tasarım" data-en="🌐 Web Design">🌐 Web Tasarım</button>
                 <button class="quick-btn" onclick="quickAction('proje')" data-tr="📂 Projeler" data-en="📂 Projects">📂 Projeler</button>
                 <button class="quick-btn" onclick="quickAction('post')" data-tr="📱 Post Yaz" data-en="📱 Write Post">📱 Post Yaz</button>
