--- a/index.html
+++ b/index.html
@@ -633,6 +633,8 @@ nav{display:flex;justify-content:space-between;align-items:center;padding:1.5rem
                     <div id="news-carousel" class="news-carousel">
                         <div class="news-carousel-loading">⏳ Haberler yükleniyor...</div>
                     </div>
+                    <button class="carousel-nav carousel-prev" onclick="scrollNewsCarousel(-1)" title="Önceki">◀</button>
+                    <button class="carousel-nav carousel-next" onclick="scrollNewsCarousel(1)" title="Sonraki">▶</button>
                 </div>
                 <button class="news-refresh-btn" onclick="loadNewsCarousel()" data-tr="🔄 Yenile" data-en="🔄 Refresh">🔄 Yenile</button>
             </div>
