--- a/index.html
+++ b/index.html
@@ -626,7 +626,16 @@ nav{display:flex;justify-content:space-between;align-items:center;padding:1.5rem
                 </div>
             </div>
             <div id="voice-seal-status" class="voice-seal-status" style="display:none;"></div>
-                        <div id="chat-box" class="chat-messages"></div>
+            <div id="chat-box" class="chat-messages"></div>
+            <div class="chat-quick-actions">
+                <button class="quick-btn" onclick="quickAction('görsel')" data-tr="🖼️ Görsel Üret" data-en="🖼️ Generate">🖼️ Görsel Üret</button>
+                <button class="quick-btn" onclick="quickAction('web')" data-tr="🌐 Web Tasarım" data-en="🌐 Web Design">🌐 Web Tasarım</button>
+                <button class="quick-btn" onclick="quickAction('proje')" data-tr="📂 Projeler" data-en="📂 Projects">📂 Projeler</button>
+                <button class="quick-btn" onclick="quickAction('post')" data-tr="📱 Post Yaz" data-en="📱 Write Post">📱 Post Yaz</button>
+                <button class="quick-btn" onclick="quickAction('fiyat')" data-tr="💰 Fiyatlar" data-en="💰 Pricing">💰 Fiyatlar</button>
+                <button class="quick-btn" onclick="quickAction('yardim')" data-tr="❓ Yardım" data-en="❓ Help">❓ Yardım</button>
+                <button class="quick-btn" onclick="quickAction('iletisim')" data-tr="✉️ İletişim" data-en="✉️ Contact">✉️ İletişim</button>
+            </div>
             <div class="chat-input">
                 <button class="chat-mic-btn" id="chat-mic-btn" onclick="startChatVoiceInput(event)" title="Sesli yaz" data-title-tr="Sesli yaz" data-title-en="Voice input">🎤</button>
                 <input type="text" id="user-input" placeholder="Mesaj gönder..." data-placeholder-tr="Mesaj gönder..." data-placeholder-en="Type here...">
